This this the changelog file for the Pothos C++ library.

Release 0.4.0 (pending)
==========================

- Allow for plugin module re-initialization after deinit()
- Fixed weak storage of plugin's associated module object
- Added fromDType() factory method to DType class
- Updated the internal Poco submodule to version 1.7.3
- Added buffer chunk API to convert into a specified buffer

Release 0.3.3 (2016-05-10)
==========================

- Added conversion for proxy vector to/from numeric matrix
- Switch to getWildcardAddr() in logger for portability
- Fix Poco in-tree build support, was missing Poco_FOUND
- Updated muparserx submodule, contains various fixes
- CMake POTHOS_SOVER variable cache fix use INTERNAL type
- Proxy server sets unbuffered on descriptors for printf() users

Release 0.3.2 (2016-03-06)
==========================

- Use current DLL path to determine the system install root
- Fixes for POTHOS_MODULE_UTIL destination and install prefix
- Added conversions between ObjectMap and ObjectKwargs
- Added CMake ENABLE_* flags for internal dependencies

Release 0.3.1 (2016-01-01)
==========================

- The reserve only prevents work when all ports fail
- InputPort::setReserve() only bump for larger setting
- Renamed BlockEval to fix symbol conflict with GUI
- Restored pothos-all metapackage for convenience
- Added pothos (runtime) to libpothos-dev Depends
- Make spuce submodule optional as a dependency
- CMakeLists.txt use newer git submodule syntax
- spuce submodule set to 0.4.2 release tag

Release 0.3.0 (2015-12-16)
==========================

- Absorbed the pothos-util toolkit into lib/Util
- Replaced NamedMutex use with FileLock and std::mutex
- Added templated Q-format/fixed-point conversions
- Added POTHOS_TEST_CLOSE() for equality with tolerance
- Support complex integer toString() and conversions
- Added displayable port alias name to framework APIs
- Support conditional preview mode in block description parser